added the present

--- a/src/pages/password/password.component.html
+++ b/src/pages/password/password.component.html
@@ -20,7 +20,7 @@
     <ion-slide>
       <ion-toolbar>
       </ion-toolbar>
-      <img src="img/ica-slidebox-img-1.png" class="slide-image"/>
+      <img src="/android_asset/www/img/ica-slidebox-img-1.png" class="slide-image"/>
       <h6 class="slide-title">To confirm change of password, click on the "continue" button</h6>
       <button ion-button large clear icon-right color="primary">
         Continue
