--- a/src/pages/result/result.component.html
+++ b/src/pages/result/result.component.html
@@ -1,12 +1,36 @@
 <ion-header>
-      <ion-navbar color="primary">
-            <ion-title>Results</ion-title>
-            
-      </ion-navbar>
+  <ion-navbar>
+    <ion-title>Daily Attendance Report</ion-title>
+  </ion-navbar>
 </ion-header>
 
-<ion-content color="primary">
-      
-    Results
+<ion-content>
+
+  <ion-card>
+
+    <img src="assets/img/bjork-live.jpg"/>
+
+    <ion-card-content>
+      <!--<ion-card-title>
+        Björk
+      </ion-card-title>
+      <p>
+        Björk first came to prominence as one of the lead vocalists of the avant pop Icelandic sextet the Sugarcubes, but when...
+      </p>-->
+    </ion-card-content>
+
+    <ion-item>
+      <ion-icon name='checkmark-circle' item-left style="color: #d03e84"></ion-icon>
+      Students Present
+      <ion-badge item-right>140</ion-badge>
+    </ion-item>
+
+    <ion-item>
+      <ion-icon name='close-circle' item-left style="color: #55acee"></ion-icon>
+      Students Absent
+      <ion-badge item-right>20</ion-badge>
+    </ion-item>
+
+  </ion-card>
 
 </ion-content>
