--- a/src/pages/result/result.component.html
+++ b/src/pages/result/result.component.html
@@ -8,6 +8,10 @@
 
   <ion-card>
 
+      <ion-card-header>
+      <b>Thank you, Miss Kiwanuka</b>
+      </ion-card-header>    
+
     <img src="assets/img/bjork-live.jpg"/>
 
     <ion-card-content>
@@ -20,17 +24,24 @@
     </ion-card-content>
 
     <ion-item>
-      <ion-icon name='checkmark-circle' item-left style="color: #d03e84"></ion-icon>
+      <ion-icon name='checkmark-circle' item-left style="color: #55acee"></ion-icon>
       Students Present
       <ion-badge item-right>140</ion-badge>
     </ion-item>
 
     <ion-item>
-      <ion-icon name='close-circle' item-left style="color: #55acee"></ion-icon>
+      <ion-icon name='close-circle' item-left style="color: #d03e84"></ion-icon>
       Students Absent
       <ion-badge item-right>20</ion-badge>
     </ion-item>
 
   </ion-card>
+
+   <div class="spacer" style="height: 7px;"></div>
+
+   <button ion-button color="primary" outline icon-left style="margin-left: 20%">
+      <ion-icon name='create' is-active="false"></ion-icon>
+      Reason For Absence
+    </button>
 
 </ion-content>
