added the charts

--- a/src/pages/result/result.component.html
+++ b/src/pages/result/result.component.html
@@ -6,7 +6,7 @@
 </ion-header>
 
 <ion-content color="primary">
-      
-    Results
+       <chart style="width:90%;height:50%" [options]="options"></chart>
+ 
 
 </ion-content>
