Reason For Absence Button

--- a/src/pages/result/result.component.html
+++ b/src/pages/result/result.component.html
@@ -13,7 +13,7 @@
       <b>Thank you, Miss Kiwanuka</b>
       </ion-card-header>    
 
-  <chart style="width:90%;height:20%" [options]="options"></chart>
+  <chart style="width:90%;height:35%" [options]="options"></chart>
 
     <ion-card-content>
      
@@ -35,9 +35,9 @@
 
    <div class="spacer" style="height: 7px;"></div>
 
-   <button ion-button color="primary" outline icon-left style="margin-left: 20%">
+   <button ion-button color="primary" outline icon-left style="margin-left: 15%">
       <ion-icon name='create' is-active="false"></ion-icon>
-      Reason For Absence
+      Reason For Absence (5)
     </button>
 
 
