--- a/src/pages/result/result.component.html
+++ b/src/pages/result/result.component.html
@@ -35,7 +35,7 @@
 
    <div class="spacer" style="height: 7px;"></div>
 
-   <button ion-button color="primary" outline icon-left style="margin-left: 15%">
+   <button ion-button color="primary" outline icon-left style="margin-left: 15%" (click)="absence()">
       <ion-icon name='create' is-active="false"></ion-icon>
       Reason For Absence (5)
     </button>
