added the emis_code

--- a/src/pages/absence/absence.component.html
+++ b/src/pages/absence/absence.component.html
@@ -19,7 +19,7 @@
   <ion-list>
     <button ion-item>
       <ion-icon style ="font-size:22px; color:#3f51b5" name="person" item-left></ion-icon>
-      <h4 style="font-size:14px;"><b>Student ID - 2014369991</b></h4>
+      <h4 style="font-size:14px;"><b>Student ID - {{selected_student.student.emis_code}}</b></h4>
     </button>
 
     <button ion-item>
