Added confirmation in next button

--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -2,4 +2,20 @@ page-about {
 
     .ion-card-header { text-align: center; } 
 
+    .home {
+
+            scroll-content {
+                display: flex;
+                flex-direction: column;
+        }
+            ion-grid {
+                padding: 0;
+                height: 100%;
+        }
+
+             ion-row {
+            flex: 1;
+        }
+
+    }
 }
