Added Log In Image

--- a/src/pages/login/login.component.html
+++ b/src/pages/login/login.component.html
@@ -1,13 +1,7 @@
-<ion-header>
-  <ion-navbar color="primary">
-    <ion-title>Login</ion-title>
-  </ion-navbar>
-</ion-header>
+<ion-content style="background: url('img/unicef-cover.jpg'); background-repeat: no-repeat; background-size: 100% 100%;" color="primary" padding>
 
-<ion-content color="primary" padding>
-  <!--style="background: url('img/unicef-child3.png'); background-repeat: no-repeat; background-size: 100% 100%;"-->
 
-  <div class="spacer" style="height: 140px;"></div>
+  <div class="spacer" style="height: 170px;"></div>
   <ion-list>
 
     <ion-item>
