icons + splash screen

--- a/src/pages/login/login.component.html
+++ b/src/pages/login/login.component.html
@@ -1,7 +1,14 @@
-<ion-content style="background: url('img/unicef-cover.jpg'); background-repeat: no-repeat; background-size: 100% 100%;" color="primary" padding>
+<ion-header>
+  <ion-navbar color="primary">
+    <ion-title>Login</ion-title>
+  </ion-navbar>
+</ion-header>
 
+<ion-content color="primary" padding>
 
-  <div class="spacer" style="height: 170px;"></div>
+<!--style="background: url('img/unicef-cover.jpg'); background-repeat: no-repeat; background-size:cover;"-->
+
+  <div class="spacer" style="height: 140px;"></div>
   <ion-list>
 
     <ion-item>
