Checkbox color false

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -38,20 +38,23 @@ $colors: (
 // iOS only Sass variables can go here
 
 
-
+// $checkbox-ios-background-color-off : red;
+$checkbox-ios-icon-border-color-off : red;
 
 // App Material Design Variables
 // --------------------------------------------------
 // Material Design only Sass variables can go here
 
-
+// $checkbox-md-icon-background-color-off : red;
+$checkbox-md-icon-border-color-off : red;
 
 
 // App Windows Variables
 // --------------------------------------------------
 // Windows only Sass variables can go here
 
-
+// $checkbox-wp-icon-background-color-off : red;
+$checkbox-wp-icon-border-color-off : red;
 
 
 // App Theme
