--- a/src/pages/password/password.component.html
+++ b/src/pages/password/password.component.html
@@ -5,27 +5,47 @@
 </ion-header>
 
 <ion-content class="tutorial-page">
+  <div class="spacer" style="height: 140px;"></div>
+  <ion-list>
 
-  <ion-slides pager>
-    <ion-slide *ngFor="let slide of slides">
-      <ion-toolbar>
-        <ion-buttons end>
-          <button ion-button color="primary">Skip</button>
-        </ion-buttons>
-      </ion-toolbar>
-      <img [src]="slide.image" class="slide-image"/>
-      <h2 class="slide-title" [innerHTML]="slide.title"></h2>
-      <p [innerHTML]="slide.description"></p>
-    </ion-slide>
-    <ion-slide>
-      <ion-toolbar>
-      </ion-toolbar>
-      <img src="/android_asset/www/img/ica-slidebox-img-1.png" class="slide-image"/>
-      <h6 class="slide-title">To confirm change of password, click on the "continue" button</h6>
-      <button ion-button large clear icon-right color="primary">
-        Continue
-        <ion-icon name="arrow-forward"></ion-icon>
-      </button>
-    </ion-slide>
-  </ion-slides>
+    <ion-item>
+      <ion-label stacked>Old Password</ion-label>
+      <ion-input [(ngModel)]="changepass.old_password" type="password"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label stacked>New Password</ion-label>
+      <ion-input [(ngModel)]="changepass.new_password" type="password"></ion-input>
+    </ion-item>
+  </ion-list>
+
+  <button [disabled]="(changepass.old_password ==undefined || changepass.old_password == '')||(changepass.new_password ==undefined || changepass.new_password == '')"
+    (click)="change()" ion-button block>Login</button>
+  <!--<button ion-button (click)="gotoPage()">Dashboard</button>-->
+  <ion-card color="danger" *ngIf="error">
+
+    <ion-card-header>
+      {{eheader}}
+    </ion-card-header>
+
+    <ion-card-content>
+      <!-- Add card content here! -->
+      {{error}}
+    </ion-card-content>
+
+  </ion-card>
+  <ion-card color="secondary" *ngIf="title">
+
+    <ion-card-header>
+      {{title}}
+    </ion-card-header>
+
+    <ion-card-content>
+      <!-- Add card content here! -->
+      {{message}}
+    </ion-card-content>
+
+  </ion-card>
+
+
 </ion-content>
