--- a/src/pages/login/login.component.html
+++ b/src/pages/login/login.component.html
@@ -23,7 +23,7 @@
   </ion-list>
 
   <button [disabled]="(password ==undefined || password == '')||(username ==undefined || username == '')" (click)="login()"
-    ion-button block>Change Password</button>
+    ion-button block>Login</button>
   <!--<button ion-button (click)="gotoPage()">Dashboard</button>-->
   <ion-card color="danger" *ngIf="error">
 
