--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -26,7 +26,7 @@ $font-path: "../assets/fonts";
 $colors: (
   primary:    #3f51b5,
   secondary:  #32db64,
-  danger:     #f53d3d,
+  danger:     #d03e84,
   light:      #f4f4f4,
   dark:       #222,
   green:      #5cb85c
