--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -25,7 +25,7 @@ $font-path: "../assets/fonts";
 
 $colors: (
   primary:    #3f51b5,
-  secondary:  #32db64,
+  secondary:  #d03e84,
   danger:     #d03e84,
   light:      #f4f4f4,
   dark:       #222,
