--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -29,7 +29,8 @@ $colors: (
   danger:     #d03e84,
   light:      #f4f4f4,
   dark:       #222,
-  green:      #5cb85c
+  green:      #5cb85c,
+  white:      #ffffff
 );
 
 
