removing the trailing whitepass when logging in

--- a/src/pages/password/password.component.html
+++ b/src/pages/password/password.component.html
@@ -17,10 +17,16 @@
       <ion-label stacked>New Password</ion-label>
       <ion-input [(ngModel)]="changepass.new_password" type="password"></ion-input>
     </ion-item>
+
+    <ion-item>
+      <ion-label stacked>Confirm Password</ion-label>
+      <ion-input [(ngModel)]="changepass.confirm_password" type="password"></ion-input>
+    </ion-item>
+
   </ion-list>
 
-  <button [disabled]="(changepass.old_password ==undefined || changepass.old_password == '')||(changepass.new_password ==undefined || changepass.new_password == '')"
-    (click)="change()" ion-button block>Login</button>
+  <button [disabled]="(changepass.old_password ==undefined || changepass.old_password == '')||(changepass.new_password ==undefined || changepass.new_password == '')||(changepass.confirm_password ==undefined || changepass.confirm_password == '')"
+    (click)="confirmpass()" ion-button block>Login</button>
   <!--<button ion-button (click)="gotoPage()">Dashboard</button>-->
   <ion-card color="danger" *ngIf="error">
 
@@ -34,7 +40,7 @@
     </ion-card-content>
 
   </ion-card>
-  <ion-card color="secondary" *ngIf="title">
+  <ion-card color="green" *ngIf="title">
 
     <ion-card-header>
       {{title}}
