--- a/src/pages/login/login.component.html
+++ b/src/pages/login/login.component.html
@@ -12,7 +12,7 @@
   <ion-list>
 
     <ion-item>
-      <ion-label stacked>School's Emis Code or Teacher's Phone Number</ion-label>
+      <ion-label stacked>School Emis Code / Teacher Phone Number</ion-label>
       <ion-input [(ngModel)]="username" type="text"></ion-input>
     </ion-item>
 
