--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -6,6 +6,15 @@ page-home {
     align-self: flex-start;
     margin-top: 14px;
   }
+
+}
+
+.circle 
+{ width: 7px; height: 7px; background: white; 
+  -moz-border-radius: 50px; -webkit-border-radius: 50px;
+  border-radius: 50px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 }
