--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -29,6 +29,7 @@ $colors: (
   danger:     #d03e84,
   light:      #f4f4f4,
   dark:       #222,
+  greytop:       #f8f8f8,
   green:      #5cb85c,
   white:      #ffffff
 );
