Design all adds

--- a/src/pages/headteacher/classes/classes.scss
+++ b/src/pages/headteacher/classes/classes.scss
@@ -34,4 +34,17 @@
     }
   }
 
+  .mylabels{
+    
+        color: gray;
+    
+    
+      }
+
+  .addinput {
+        
+            font-size: 14px;
+      }
+
+
 }
